GymControllerTest added